# curso-aws-lambda-python-serverless

./: README.md  pyproject.toml
agf-data-pipeline/: .gitignore  GUIDELINE.md  buildspec-app.yml  buildspec-infra.yml  docker-compose.yaml  pipeline.yaml  pyproject.toml  samconfig.toml  template.yaml
agf-data-pipeline/docs/architecture/: TEST_ENVIRONMENT_SETUP.md  workflow_diagram.md
agf-data-pipeline/docs/data_model/: 01_person_account_model.md
agf-data-pipeline/docs/schemas/: ACCOUNT_INFORMATION_SCHEMAS.md  new_schema.md
agf-data-pipeline/docs/sources/btg/api/: API Autorizadora.yaml  API Base de Conta.yaml  API de Dados Cadastrais.yaml  API de Informação STVM(Net New Money).yaml  API de Informação de candidatos.yaml  API de Movimentações.yaml  API de Perfil de Investimento.yaml  API de Performance.yaml  API de Posição Open Finance.yaml  API de Produtos Estruturados.yaml  API de Relatórios Gerenciais por Parceiro.yaml  API de Relação de Produtos - RF.yaml  API de Rentabilidade Diária.yaml  API de Rentabilidade Mensal.yaml  API de busca de posição.yaml  API de consulta de Debêntures.yaml  API de consulta de notas de corretagem.yaml  (+6 more)
agf-data-pipeline/handlers/: btg_dlq_reconcile.py  btg_requests.py  data_processor.py  requirements.txt  webhook_receiver.py
agf-data-pipeline/infra/: deploy.sh  template.yaml
agf-data-pipeline/scripts/: cleanup.sh  homelab.sh  reset-localstack.sh  setup.sh  test_flow.sh
agf-data-pipeline/shared-libs/python/certifi-2026.4.22.dist-info/: RECORD
agf-data-pipeline/shared-libs/python/charset_normalizer-3.4.7.dist-info/: RECORD
agf-data-pipeline/shared-libs/python/idna-3.13.dist-info/: RECORD
agf-data-pipeline/shared-libs/python/requests-2.31.0.dist-info/: RECORD
agf-data-pipeline/shared-libs/python/requests-2.32.5.dist-info/: RECORD
agf-data-pipeline/shared-libs/python/urllib3-1.26.20.dist-info/: RECORD
agf-data-pipeline/src/core/: config.py  exceptions.py  logging.py
agf-data-pipeline/src/etl/workflows/: request_btg_report.py
agf-data-pipeline/src/models/: __init__.py  webhook.py
agf-data-pipeline/tests/: README.md  conftest.py
agf-data-pipeline/tests/aws/: test_webhook_receiver.py
agf-data-pipeline/tests/btg/: test_btg_client_integration.py
python_libraries/aws/: pyproject.toml
python_libraries/aws/src/aws/: __init__.py  exceptions.py  s3.py
python_libraries/btg/: pyproject.toml
python_libraries/btg/src/btg/: __init__.py  client.py  exceptions.py
(+5 files in other folders)
