[project]
name = "aff-data-pipeline"
version = "0.1.0"
description = "AGF Data Pipeline - ETL"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "pyarrow>=22.0.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "tenacity>=9.0.0",
    "loguru>=0.7.3",
    # MySQL / ORM
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    # Internal libraries (editable mode)
    "agf-btg-client",
    "agf-hubspot-client",
    #    "agf-aws-utils",
    "agf-database",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[tool.uv.sources]
agf-btg-client = { workspace = true }
agf-hubspot-client = { workspace = true }
#agf-aws-utils = { workspace = true }
agf-database = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
