[project]
name = "agf-aws-utils"
version = "0.1.0"
description = "AWS utilities for AGF - S3, Lambda helpers, and more"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.1.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "loguru>=0.7.3",
    "tenacity>=9.0.0",
    "pyarrow>=22.0.0",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "moto>=5.0.0",
    "localstack-client>=2.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aws"]

